# FractalGenerator

./: .gitattributes  CMakeLists.txt  README.md
include/: complex.h  config.h  display.h  fractal.h  main.h  types.h
src/: complex.c  config.c  display.c  fractal.c  main.c
